--- a/dairy/xq/index-demo/css/style.css
+++ b/dairy/xq/index-demo/css/style.css
@@ -4,7 +4,7 @@ body {
     font-family: Meiryo, "メイリオ", "Hiragino Kaku Gothic ProN", Verdana, Arial, Helvetica, sans-serif;
 }
 
-.carousel {
+#carousel {
     height: calc(100vh - 63.5px);
     margin-top: 0px;
 }
