--- a/dairy/xq/index-demo-2/css/header.css
+++ b/dairy/xq/index-demo-2/css/header.css
@@ -57,18 +57,19 @@
 }
 
 .navbar {
-  font-weight: 520;
+  font-weight: 600;
   padding: 0;
   font-size: 18px;
 }
 
 .navbar .menu-item {
   /* margin-right: 2rem; */
-  margin: 22.5px ;
+  margin: 22.5px;
+  color: #333;
 }
 
 .menu-item:hover {
-  color: #006EB7;
+  color: #264989;
   transition: all .35s;
   cursor: pointer;
 }
@@ -103,11 +104,20 @@
 
 .nav-lan:hover {
   transition: all .35s;
-  color: #006EB7;
+  color: #264989;
   cursor: pointer;
 }
 
 .nav-lan:hover>i {
   transition: all .35s;
   transform: rotate(180deg);
+}
+
+.nav-search {
+  transition: all .35s;
+}
+
+.nav-search:hover {
+  color: #264989;
+  transition: all .35s;
 }
