--- a/dairy/xq/index-demo-2/css/index.css
+++ b/dairy/xq/index-demo-2/css/index.css
@@ -2,32 +2,31 @@
 .carousel {
   height: calc(100vh - 80px);
   margin-top: 0px;
+
 }
 
 .carousel-img {
   height: calc(100vh - 80px);
   object-fit: cover;
   cursor: pointer;
-
 }
 
-.carousel-inner {
+.carousel-item {
   position: relative;
   overflow: hidden;
 }
 
-.carousel-inner::after {
+.carousel-item::after {
   position: absolute;
-  left: 0;
   top: 0;
-  display: block;
+  left: 0;
+  content: "";
+  color: #fff;
+  background-color: rgb(99, 99, 99);
+  opacity: 0.2;
+  z-index: 1;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  content: attr(data-text);
-  transition: all 1s ease;
-  transform: translateY(-100%);
-  color: #FFF;
 }
 
 /* 关于我们 */
@@ -53,6 +52,7 @@
 
 .about-inner h1 {
   /* border-bottom: 3.5px solid #264989;  */
+  margin-top: 7.5px;
   margin-bottom: 2.5rem;
 }
 
@@ -65,7 +65,18 @@
 .about-inner p {
   margin: 0 auto;
   width: 80%;
-  margin-bottom: 3.5rem;
+  margin-bottom: 1.5rem;
+}
+
+.about-icon {
+  display: flex;
+  justify-content: center;
+}
+
+.about-icon-item {
+  /* display: block; */
+  flex-wrap: wrap;
+  margin: 2em;
 }
 
 .about-inner button {
@@ -79,6 +90,7 @@
   transition-property: background-color, color;
   transition-duration: 0.5s;
   transition-timing-function: ease-out;
+  margin-top: 2rem;
 }
 
 .about-inner button:hover {
@@ -90,8 +102,77 @@
   transition-timing-function: ease-out;
 }
 
+/* work-card  */
+.cards {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin-top: 1em;
+}
+
+.card-title {
+  text-align: center;
+  display: block;
+}
+
+.card-title hr {
+  margin-top: 2rem;
+  background-color: #264989;
+  height: 3px;
+  width: 5.56%;
+}
+
+.card-inner {
+  margin: 0 auto;
+  width: 61.8%;
+  padding: 5px;
+  display: flex;
+  justify-content: center;
+}
+
+.card-list {
+  width: 960px;
+  min-width: 960px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.card-item {
+  width: 300px;
+  margin: 10px;
+}
+
+.card-item img {
+  width: 300px;
+  height: auto;
+}
+
+.card-box {
+  /* text-align: left; */
+  display: block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.box-title {
+  text-decoration: underline;
+  font-weight: bold;
+  margin-top: 1rem;
+}
+
+.works-tag {
+  width: 300px;
+  font-size: 13px;
+  color: #a9a9a9;
+  margin-top: 5px;
+}
+
+
+
 /* 卡片 */
-.main-card {
+/* .main-card {
   padding: 0 2em;
 }
 
@@ -99,7 +180,7 @@
   cursor: pointer;
   border-radius: 0.45rem;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.125);
-}
+} */
 
 /* news */
 .news-content {
