--- a/demo/css/common.css
+++ b/demo/css/common.css
@@ -1,9 +1,182 @@
 * {
-  font-family: 'M PLUS Rounded 1c', 'Kosugi Maru', 'Nunito', "メイリオ", "Hiragino Kaku Gothic ProN", Verdana, Arial, Helvetica, sans-serif;
+  font-family: 'Nunito', 'Roboto', 'M PLUS Rounded 1c', 'Kosugi Maru', "メイリオ", "Hiragino Kaku Gothic ProN", Verdana, Arial, Helvetica, sans-serif;
 }
 
 body {
   -webkit-font-smoothing: antialiased;
   font-size: 16px;
+}
+
+
+.caps {
+  /* 大写字母 */
+  text-transform: uppercase;
+}
+
+.ofh {
+  overflow: hidden;
+}
+
+.bg-dark-blue {
+  background-color: #003149;
+}
+
+.bg-darkest-blue {
+  background-color: #012334;
+}
+
+.jcb {
+  -ms-flex-pack: justify;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+}
+
+.fc {
+  display: flex;
+  justify-content: center;
+}
+
+.fw {
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+
+.f {
+  display: flex;
+}
+
+.aic {
+  -ms-flex-align: center;
+  -webkit-box-align: center;
+  align-items: center;
+}
+
+
+.x {
+  width: 100%;
+}
+
+.rel {
+  position: relative;
+}
+
+.abs {
+  position: absolute;
+}
+
+.mxa {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.outer {
+  padding: 0 40px;
+}
+
+.h6 {
+  margin: 0;
+  line-height: 1.6;
+  font-size: 0.88rem;
+}
+.clear-a {
+  text-decoration: none;
+}
+
+.clear-a:hover {
+  text-decoration: none;
+}
+
+.btn-dark-blue {
+  padding: 0.5rem 1rem;
+  border: 2px solid #264989c7;
+  border-radius: 0.5rem;
+  background-color: #fff;
+  outline: none;
+  font-size: 22px;
+  transition-property: background-color, color;
+  transition-duration: 0.5s;
+  transition-timing-function: ease-out;
+  margin-top: 2rem;
+}
+
+.btn-dark-blue:hover {
+  cursor: pointer;
+  color: #fff;
+  background-color: #264989;
+  transition-property: background-color, color;
+  transition-duration: 0.5s;
+  transition-timing-function: ease-out;
+}
+
+/* mask */
+.mask {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(36, 36, 36, 0.774);
+  color: #ffffff;
+  opacity: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition-duration: .5s;
+  transition-property: opacity, -webkit-transform;
+  transition-property: transform, opacity;
+}
+
+.mask>a {
+  font-size: 22px;
+  color: #fff;
+  border: 1px solid white;
+  border-radius: 5px;
+  text-align: center;
+  padding: 2.5px 15px 2.5px 15px;
+  text-decoration: none;
+}
+
+.mask:hover {
+  cursor: pointer;
+  opacity: 1;
+  transition-duration: .5s;
+  transition-property: opacity, -webkit-transform;
+  transition-property: transform, opacity;
+}
+
+/* mask with light */
+.mask-light {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(39, 39, 39, 0.247);
+  color: #ffffff;
+  opacity: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition-duration: .5s;
+  transition-property: opacity, -webkit-transform;
+  transition-property: transform, opacity;
+}
+
+.mask-light>a {
+  font-size: 22px;
+  color: #fff;
+  border: 1px solid white;
+  border-radius: 5px;
+  text-align: center;
+  padding: 2.5px 15px 2.5px 15px;
+  text-decoration: none;
+}
+
+.mask-light:hover {
+  cursor: pointer;
+  opacity: 1;
+  transition-duration: .5s;
+  transition-property: opacity, -webkit-transform;
+  transition-property: transform, opacity;
 }
 
