--- a/demo/css/footer.css
+++ b/demo/css/footer.css
@@ -1,30 +1,15 @@
-.bg-dark-blue {
-  background-color: #003149;
+.footer {
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
 .footer .c-white {
   color: #fff;
 }
 
-.x {
-  width: 100%;
-}
-
-.rel {
-  position: relative;
-}
-
-.mxa {
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.outer {
-  padding: 0 40px;
-}
-
 .footer__wrapper {
   display: flex;
+  padding-top: 50px;
 }
 
 .footer__links {
@@ -56,4 +41,140 @@
   max-width: 280px;
   order: 1;
   /* 移动端要order:-1 使得此元素在首位 */
+}
+
+.footer a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.footer__newsletter h6,
+.footer__links h6 {
+  margin-bottom: 1.2rem;
+}
+
+.footer__newsletter p,
+.footer__links a {
+  opacity: .5;
+  transition: opacity .3s ease-in-out;
+}
+
+.footer__links a:hover {
+  cursor: pointer;
+  opacity: 1;
+  transition: opacity .3s ease-in-out;
+}
+
+.footer__logo h1 {
+  margin: 0;
+}
+
+.footer__newsletter p {
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
+.newsletter.is-light input {
+  color: #fff;
+  border: 1px solid #fff;
+}
+
+.reader {
+  outline: none;
+  background: transparent;
+  /* background-color: #003149; */
+  padding: 1.6em 1.4em 1.7em;
+  width: 100%;
+}
+
+.newsletter button {
+  outline: none;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  -webkit-appearance: none;
+  background: transparent;
+  border: 0;
+  border-radius: 0;
+  cursor: pointer;
+  display: inline-block;
+  font-family: inherit;
+  height: 100%; 
+  width: 70px;
+}
+
+.newsletter button i {
+  font-size: 1em;
+  color: #fff;
+}
+
+.colophon__wrapper {
+  padding-top: 25px;
+  padding-bottom: 25px;
+}
+
+.colophon__wrapper a {
+  text-decoration: none;
+  color: #fff
+}
+
+.colophon__social {
+  list-style: none;
+  justify-content: end;
+  margin-bottom: 0;
+  max-width: 150px;
+  transform: translateX(.6rem);
+  color: #fff;
+}
+
+.colophon__links {
+  list-style: none;
+  justify-content: left;
+  order: -1;
+  width: 450px;
+  text-align: center;
+  color: #fff;
+
+}
+
+.colophon__links li {
+  border-right: 1px solid hsla(0, 0%, 100%, .5);
+  height: 14px;
+  line-height: 1;
+  padding: .1rem .8rem;
+  width: auto;
+}
+
+.colophon__links :last-child {
+  border-right: none;
+}
+
+.colophon__social l1 {
+  margin-right: 5px;
+}
+
+.colophon__social i {
+  margin-top: 5px;
+  font-size: 24px;
+  padding: .1rem .5rem;
+}
+
+.colophon__wrapper {
+  font-size: 14px;
+  color: #fff;
+
+}
+
+.fade-out {
+  opacity: 0.5;
+  transition-duration: .6s;
+  transition-property: opacity, -webkit-transform;
+  transition-property: transform, opacity;
+}
+
+.fade-out:hover {
+  opacity: 1;
+  transition-duration: .6s;
+  transition-property: opacity, -webkit-transform;
+  transition-property: transform, opacity;
 }
