--- a/demo/css/index.css
+++ b/demo/css/index.css
@@ -79,29 +79,6 @@
   margin: 2em;
 }
 
-.about-inner button {
-  width: 20%;
-  padding: 0.5rem;
-  border: 2px solid #264989c7;
-  border-radius: 0.5rem;
-  background-color: #fff;
-  outline: none;
-  font-size: 22px;
-  transition-property: background-color, color;
-  transition-duration: 0.5s;
-  transition-timing-function: ease-out;
-  margin-top: 2rem;
-}
-
-.about-inner button:hover {
-  cursor: pointer;
-  color: #fff;
-  background-color: #264989;
-  transition-property: background-color, color;
-  transition-duration: 0.5s;
-  transition-timing-function: ease-out;
-}
-
 /* section */
 .index--recruit--btm {
   margin-top: 5rem;
@@ -168,14 +145,14 @@
   font-size: 18px;
 }
 
-/* work-card  */
+/* card  */
 .cards {
-
   width: 100%;
   display: flex;
   justify-content: center;
   flex-direction: column;
   margin-top: 5rem;
+  margin-bottom: 5rem;
 }
 
 .card-title {
@@ -190,6 +167,71 @@
   width: 5.56%;
 }
 
+/* serve-cards */
+.serve-inner {
+  width: 80%;
+  margin-bottom: 2.5rem;
+}
+
+.serve-item {
+  width: 33.3%;
+  padding: 15px;
+}
+
+.item-content {
+  overflow: hidden;
+  text-align: center;
+  min-height: 400px;
+  max-height: 400px;
+}
+
+.item-content img {
+  width: 100%;
+  height: auto;
+  transform: scale(1);
+  transition: all 1s ease 0s;
+}
+
+.item-content img:hover {
+  width: 100%;
+  cursor: pointer;
+  transform: scale(1.2);
+  transition: all 1s ease 0s;
+}
+.item-text a {
+  color: #111;
+}
+.item-text h3 {
+  color: #111;
+  margin-top: 1rem;
+  font-weight: bold;
+  text-decoration: underline;
+  opacity: 1;
+  transition-duration: .5s;
+  transition-property: opacity, -webkit-transform;
+  transition-property: transform, opacity, text-decoration;
+}
+
+.item-text h3:hover {
+  cursor: pointer;
+  text-decoration: none;
+  font-weight: 400;
+  opacity: 0.65;
+  transition-duration: .5s;
+  transition-property: opacity, -webkit-transform;
+  transition-property: transform, opacity, text-decoration;
+}
+
+.item-text p {
+  text-align: left;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 4;
+}
+
+/* work-cards */
 .card-inner {
   margin: 0 auto;
   width: 61.8%;
@@ -206,17 +248,20 @@
 }
 
 .card-item {
-  position: relative;
   width: 300px;
   margin: 10px;
 }
 
-.card-item>img {
+.card-item .item-img {
+  position: relative;  
+  /* width: 300px; */
+}
+.card-item .item-img img {
   width: 300px;
   height: auto;
 }
 
-.card-item .mask {
+/* .card-item .mask {
   position: absolute;
   top: 0;
   left: 0;
@@ -228,7 +273,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  
+  transition-duration: .5s;
+  transition-property: opacity, -webkit-transform;
+  transition-property: transform, opacity;
 }
 
 .mask>a {
@@ -244,8 +291,10 @@
 .card-item .mask:hover {
   cursor: pointer;
   opacity: 1;
-  
-}
+  transition-duration: .5s;
+  transition-property: opacity, -webkit-transform;
+  transition-property: transform, opacity;
+} */
 
 .card-box {
   /* text-align: left; */
@@ -259,18 +308,26 @@
   text-decoration: underline;
   font-weight: bold;
   margin-top: 1rem;
+  opacity: 1;
+  transition-duration: .5s;
+  transition-property: opacity, -webkit-transform;
+  transition-property: transform, opacity, text-decoration;
 }
 
 .box-title:hover {
   cursor: pointer;
   text-decoration: none;
   font-weight: normal;
+  opacity: 0.65;
+  transition-duration: .5s;
+  transition-property: opacity, -webkit-transform;
+  transition-property: transform, opacity, text-decoration;
 }
 
 .works-tag {
   width: 300px;
   font-size: 13px;
-  color: #a9a9a9;
+  color: #6e6e6e;
   margin-top: 5px;
 }
 
