--- a/assets/xxy/demo2/css/fold.css
+++ b/assets/xxy/demo2/css/fold.css
@@ -17,12 +17,38 @@
         width: 80%;
         height: 100%;
         background-color: #fff;
-        position: absolute;
+        position: fixed;
         top: 80px;
         left: -80%;
         z-index: 9;
     }
     .second-menu-item{
         margin: 22.5px ;
+    }
+}
+
+@media screen and (max-width:768px){
+    .left-fold{
+        display: flex;
+    }
+    .img-fold{
+        width: 32.5px;
+        height: auto;
+        cursor: pointer;
+    }
+    .second-menu{
+        width: 80%;
+        height: 100%;
+        background-color: #fff;
+        position: absolute;
+        top: 60px;
+        left: -80%;
+        z-index: 9;
+    }
+    .second-menu-item{
+        margin: 22.5px ;
+    }
+    .nav-right{
+        display: none;
     }
 }
