--- a/demo/css/header.css
+++ b/demo/css/header.css
@@ -60,15 +60,21 @@
   font-weight: 600;
   padding: 0;
   font-size: 18px;
+  
 }
 
 .navbar .menu-item {
-  /* margin-right: 2rem; */
-  margin: 22.5px;
+  margin-left: 22.5px;
+  margin-right: 22.5px;
+  /* margin: 22.5px; */
   color: #333;
+  height: 100%;
+  display: flex;
+  align-items: center;
 }
 
 .menu-item:hover {
+  opacity: 0.75;
   color: #264989;
   transition: all .35s;
   cursor: pointer;
@@ -79,6 +85,7 @@
 }
 
 .menu-item:hover>span>i {
+  opacity: 0.75;
   transition: all .35s;
   transform: rotate(180deg);
 }
@@ -118,6 +125,8 @@
 }
 
 .nav-search:hover {
+  cursor: pointer;
+  opacity: 0.75;
   color: #264989;
   transition: all .35s;
 }
