--- a/demo/css/web-end.css
+++ b/demo/css/web-end.css
@@ -1,3 +1,101 @@
+.map {
+  width: 100%;
+  background-image: url("./../imgs/tokey-1921.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: top;
+  background-attachment: fixed;
+  position: relative;
+}
+
+.map::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: "";
+  background-color: black;
+  opacity: 0.5;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+}
+
+.map-inner {
+  width: 80%;
+  height: 400px;
+  border: 1px dotted #111;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.map-container {
+  height: 400px;
+  width: 60%;
+}
+
+.map-content {
+  height: 400px;
+  width: 40%;
+}
+
+.map-height {
+  width: 90%;
+  height: 320px;
+  border-radius: 5px;
+}
+
+#map {
+  height: 100%;
+  border-radius: 5px;
+}
+
+.content-text {
+  color: #fff;
+  padding-top: 100px;
+  /* padding-left: 10px;   */
+}
+
+.content-text h2 {
+  margin-bottom: 2rem;
+}
+
+.content-text p {
+  margin: 0;
+  line-height: 1.6;
+}
+
+.content-text b {
+  margin: 0;
+  line-height: 1.6;
+}
+
+.content-text div {
+  margin-top: 2rem;
+}
+
+.content-text a {
+  z-index: 5;
+  color: #fff;
+  font-weight: 600;
+  border: 1px solid white;
+  border-radius: 5px;
+  text-align: center;
+  padding: 10px 20px 10px 20px;
+  transition-property: background-color, color;
+  transition-duration: 0.15s;
+  transition-timing-function: ease-in-out;
+}
+
+.content-text a:hover {
+  cursor: pointer;
+  color: #111;
+  background-color: #fff;
+  transition-property: background-color, color;
+  transition-duration: 0.15s;
+  transition-timing-function: ease-in-out;
+}
+
+/* footer-part */
 .footer {
   padding-top: 50px;
   padding-bottom: 50px;
@@ -99,7 +197,7 @@
   cursor: pointer;
   display: inline-block;
   font-family: inherit;
-  height: 100%; 
+  height: 100%;
   width: 70px;
 }
 
@@ -119,6 +217,8 @@
 }
 
 .colophon__social {
+  margin: 0;
+  padding: 0;
   list-style: none;
   justify-content: end;
   margin-bottom: 0;
@@ -128,6 +228,8 @@
 }
 
 .colophon__links {
+  margin: 0;
+  padding: 0;
   list-style: none;
   justify-content: left;
   order: -1;
