--- a/demo/css/header.css
+++ b/demo/css/header.css
@@ -7,7 +7,7 @@
   position: sticky;
   top: 0;
   z-index: 100;
-  opacity: 0.925;
+  /* opacity: 0.925; */
   display: flex;
   justify-content: center;
   background-color: #fff;
@@ -60,12 +60,12 @@
   font-weight: 600;
   padding: 0;
   font-size: 18px;
-  
+
 }
 
 .navbar .menu-item {
-  margin-left: 22.5px;
-  margin-right: 22.5px;
+  margin-left: 17.5px;
+  margin-right: 17.5px;
   /* margin: 22.5px; */
   color: #333;
   height: 100%;
@@ -74,20 +74,23 @@
 }
 
 .menu-item:hover {
-  opacity: 0.75;
-  color: #264989;
-  transition: all .35s;
+  text-decoration: underline;
+  color: #264989c5;
+  transition-duration: 0.35s;
+  transition-timing-function: ease-in-out;
   cursor: pointer;
 }
 
 .svg-down {
-  transition: all .35s;
+  transition-duration: 0.35s;
+  transition-timing-function: ease-in-out;
 }
 
 .menu-item:hover>span>i {
-  opacity: 0.75;
   transition: all .35s;
   transform: rotate(180deg);
+  transition-duration: 0.35s;
+  transition-timing-function: ease-out;
 }
 
 .nav-right {
@@ -109,19 +112,23 @@
   margin-right: 5px;
 }
 
-.nav-lan:hover {
-  transition: all .35s;
-  color: #264989;
-  cursor: pointer;
+.nav-search {
+  transition-duration: 0.35s;
+  transition-timing-function: ease-in;
 }
 
-.nav-lan:hover>i {
-  transition: all .35s;
+.nav-lan:hover>span>i {
+  transition-duration: 0.35s;
+  transition-timing-function: ease-out;
   transform: rotate(180deg);
 }
 
-.nav-search {
-  transition: all .35s;
+.nav-lan:hover {
+  text-decoration: underline;
+  color: #264989c5;
+  cursor: pointer;
+  transition-duration: 0.35s;
+  transition-timing-function: ease-out;
 }
 
 .nav-search:hover {
@@ -129,4 +136,71 @@
   opacity: 0.75;
   color: #264989;
   transition: all .35s;
+}
+
+
+.menu-item>ul,
+.menu-item>ul>li>a {
+  width: 100%;
+  list-style: none;
+  color: #333;
+  margin: 0;
+  padding: 0;
+}
+
+.menu-item>ul>li>i {
+  color: rgba(51, 51, 51, 0.685);
+  margin-right: 2.5%;
+  font-size: 13px;
+}
+
+.expand>ul {
+  display: none;
+  font-weight: normal;
+  padding: 10px 2rem 10px 2rem;
+  border-radius: 0.45rem;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.135);
+  background-color: #fff;
+  position: relative;
+  opacity: 1;
+  transform: all .3s;
+}
+
+.expand>ul>li {
+  width: 50%;
+  float: left;
+  display: block;
+  padding: 0.25rem 1.5rem 0.25rem 1.5rem;
+  font-size: 14px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.expand:hover>ul {
+  opacity: 1;
+  display: block;
+  position: absolute;
+  top: 80px;
+  left: 0;
+  transform: all .3s;
+}
+
+@keyframes myMove {
+  0% {}
+
+  100% {
+    margin-right: 5%
+  }
+}
+
+.expand>ul>li:hover>.menu-item>ul>li>i {
+  /* animation: myMove 1s linear infinite alternate; */
+}
+
+.expand>ul>li:hover>a {
+  font-weight: bold;
+  color: #264989;
+  text-decoration: none;
+  transform: all .3s;
 }
