--- a/assets/xxy/demo2/css/header.css
+++ b/assets/xxy/demo2/css/header.css
@@ -110,7 +110,7 @@
   }
 }
 
-@media screen and (max-width:1200px) and (min-width:768px){
+@media screen and (max-width:1200px) and (min-width:760px){
   .nav {
     width: 90%;
     height: 80px;
@@ -207,7 +207,7 @@
   }
 }
 
-@media screen and (max-width:768px){
+@media screen and (max-width:760px){
   .nav {
     width: 90%;
     height: 60px;
@@ -245,10 +245,7 @@
   }
   
   .nav-right {
-    width: 5%;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
+    display: none;
   }
   
   .navbar {
