--- a/demo/css/header.css
+++ b/demo/css/header.css
@@ -13,111 +13,291 @@
   background-color: #fff;
 }
 
-.nav {
-  width: 90%;
-  height: 80px;
-  background-color: #fff;
-  box-sizing: border-box;
-  padding: 0;
-}
-
-.nav .img-responsive {
-  width: 32.5px;
-  height: auto;
-}
-
-.logo-font {
-  font-size: 32px;
-  font-weight: 600;
-}
-
-.nav-menu,
-.nav-logo .nav-right {
-  padding: 0;
-}
-
-.nav-logo {
-  width: 15%;
-  display: flex;
-  justify-content: flex-start;
-  padding: 15px 0 10px 0;
-}
-
-.nav-menu {
-  width: 70%;
-  display: flex;
-  justify-content: center;
-
-}
-
-.nav-right {
-  width: 15%;
-  display: flex;
-  justify-content: flex-end;
-}
-
-.navbar {
-  font-weight: 600;
-  padding: 0;
-  font-size: 18px;
+@media screen and (min-width:1200px){
   
+  .nav {
+    width: 90%;
+    height: 80px;
+    background-color: #fff;
+    box-sizing: border-box;
+    padding: 0;
+  }
+  
+  .nav .img-responsive {
+    width: 32.5px;
+    height: auto;
+  }
+  
+  .logo-font {
+    font-size: 32px;
+    font-weight: 600;
+  }
+  
+  .nav-menu,
+  .nav-logo .nav-right {
+    padding: 0;
+  }
+  
+  .nav-logo {
+    width: 15%;
+    display: flex;
+    justify-content: flex-start;
+    padding: 15px 0 10px 0;
+  }
+  
+  .nav-menu {
+    width: 70%;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .nav-right {
+    width: 15%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
+  
+  .navbar {
+    font-weight: 520;
+    padding: 0;
+    font-size: 18px;
+  }
+  
+  .navbar .menu-item {
+    /* margin-right: 2rem; */
+    margin: 22.5px ;
+  }
+  
+  .menu-item:hover {
+    color: #006EB7;
+    transition: all .35s;
+    cursor: pointer;
+  }
+  
+  .svg-down {
+    transition: all .35s;
+  }
+  
+  .menu-item:hover>span>i {
+    transition: all .35s;
+    transform: rotate(180deg);
+  }
+  
+  .nav-search .icon {
+    margin: auto;
+    margin-top: 3.5px;
+  }
+  
+  .nav-lan {
+    display: flex;
+    align-items: center;
+  }
+  
+  .nav-lan>span {
+    margin-right: 5px;
+  }
+  
+  .nav-lan:hover {
+    transition: all .35s;
+    color: #006EB7;
+    cursor: pointer;
+  }
+  
+  .nav-lan:hover>i {
+    transition: all .35s;
+    transform: rotate(180deg);
+  }
 }
 
-.navbar .menu-item {
-  margin-left: 22.5px;
-  margin-right: 22.5px;
-  /* margin: 22.5px; */
-  color: #333;
-  height: 100%;
-  display: flex;
-  align-items: center;
+@media screen and (max-width:1200px) and (min-width:760px){
+  .nav {
+    width: 90%;
+    height: 80px;
+    background-color: #fff;
+    box-sizing: border-box;
+    padding: 0;
+  }
+  
+  .nav .img-responsive {
+    width: 32.5px;
+    height: auto;
+  }
+  
+  .logo-font {
+    font-size: 32px;
+    font-weight: 600;
+  }
+  
+  .nav-menu,
+  .nav-logo .nav-right {
+    padding: 0;
+  }
+  
+  .nav-logo {
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    padding: 15px 0 10px 3%;
+  }
+  
+  .nav-menu {
+    width: 70%;
+    display: flex;
+    justify-content: center;
+    display: none;
+  }
+  
+  .nav-right {
+    width: 5%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
+  
+  .navbar {
+    font-weight: 520;
+    padding: 0;
+    font-size: 18px;
+  }
+  
+  .navbar .menu-item {
+    /* margin-right: 2rem; */
+    margin: 22.5px ;
+  }
+  
+  .menu-item:hover {
+    color: #006EB7;
+    transition: all .35s;
+    cursor: pointer;
+  }
+  
+  .svg-down {
+    transition: all .35s;
+  }
+  
+  .menu-item:hover>span>i {
+    transition: all .35s;
+    transform: rotate(180deg);
+  }
+  
+  .nav-search .icon {
+    margin: auto;
+    margin-top: 3.5px;
+  }
+  
+  .nav-lan {
+    display: flex;
+    align-items: center;
+  }
+  
+  .nav-lan>span {
+    margin-right: 5px;
+  }
+  
+  .nav-lan:hover {
+    transition: all .35s;
+    color: #006EB7;
+    cursor: pointer;
+  }
+  
+  .nav-lan:hover>i {
+    transition: all .35s;
+    transform: rotate(180deg);
+  }
 }
 
-.menu-item:hover {
-  opacity: 0.75;
-  color: #264989;
-  transition: all .35s;
-  cursor: pointer;
-}
-
-.svg-down {
-  transition: all .35s;
-}
-
-.menu-item:hover>span>i {
-  opacity: 0.75;
-  transition: all .35s;
-  transform: rotate(180deg);
-}
-
-.nav-right {
-  display: flex;
-  align-items: center;
-}
-
-.nav-search .icon {
-  margin: auto;
-  margin-top: 3.5px;
-}
-
-.nav-lan {
-  display: flex;
-  align-items: center;
-}
-
-.nav-lan>span {
-  margin-right: 5px;
-}
-
-.nav-lan:hover {
-  transition: all .35s;
-  color: #264989;
-  cursor: pointer;
-}
-
-.nav-lan:hover>i {
-  transition: all .35s;
-  transform: rotate(180deg);
+@media screen and (max-width:760px){
+  .nav {
+    width: 90%;
+    height: 60px;
+    background-color: #fff;
+    box-sizing: border-box;
+    padding: 0;
+  }
+  
+  .nav .img-responsive {
+    width: 32.5px;
+  }
+  
+  .logo-font {
+    font-size: 32px;
+    font-weight: 600;
+  }
+  
+  .nav-menu,
+  .nav-logo .nav-right {
+    padding: 0;
+  }
+  
+  .nav-logo {
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    padding: 5px 0 3px 0;
+  }
+  
+  .nav-menu {
+    width: 70%;
+    display: flex;
+    justify-content: center;
+    display: none;
+  }
+  
+  .nav-right {
+    display: none;
+  }
+  
+  .navbar {
+    font-weight: 520;
+    padding: 0;
+    font-size: 18px;
+  }
+  
+  .navbar .menu-item {
+    /* margin-right: 2rem; */
+    margin: 22.5px ;
+  }
+  
+  .menu-item:hover {
+    color: #006EB7;
+    transition: all .35s;
+    cursor: pointer;
+  }
+  
+  .svg-down {
+    transition: all .35s;
+  }
+  
+  .menu-item:hover>span>i {
+    transition: all .35s;
+    transform: rotate(180deg);
+  }
+  
+  .nav-search .icon {
+    margin: auto;
+    margin-top: 3.5px;
+  }
+  
+  .nav-lan {
+    display: flex;
+    align-items: center;
+  }
+  
+  .nav-lan>span {
+    margin-right: 5px;
+  }
+  
+  .nav-lan:hover {
+    transition: all .35s;
+    color: #006EB7;
+    cursor: pointer;
+  }
+  
+  .nav-lan:hover>i {
+    transition: all .35s;
+    transform: rotate(180deg);
+  }
 }
 
 .nav-search {
