--- a/demo/css/index.css
+++ b/demo/css/index.css
@@ -167,32 +167,32 @@
   padding: 15px;
 }
 
-.item-content {
+.serve-item .item-content {
   overflow: hidden;
   text-align: center;
   min-height: 400px;
   max-height: 400px;
 }
 
-.item-content img {
+.serve-item .item-content img {
   width: 100%;
   height: auto;
   transform: scale(1);
   transition: all 1s ease 0s;
 }
 
-.item-content img:hover {
+.serve-item .item-content img:hover {
   width: 100%;
   cursor: pointer;
   transform: scale(1.2);
   transition: all 1s ease 0s;
 }
 
-.item-text a {
+.serve-item .item-content .item-txt a {
   color: #111;
 }
 
-.item-text h3 {
+.serve-item .item-content .item-txt h3 {
   color: #111;
   margin-top: 1rem;
   font-weight: bold;
@@ -203,7 +203,7 @@
   transition-property: transform, opacity, text-decoration;
 }
 
-.item-text h3:hover {
+.serve-item .item-content .item-txt h3:hover {
   cursor: pointer;
   text-decoration: none;
   font-weight: 400;
@@ -213,7 +213,7 @@
   transition-property: transform, opacity, text-decoration;
 }
 
-.item-text p {
+.serve-item .item-content .item-txt p {
   text-align: left;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -223,7 +223,7 @@
 }
 
 /* work-cards */
-.card-inner {
+.work-inner {
   margin: 0 auto;
   width: 61.8%;
   padding: 5px;
@@ -231,64 +231,29 @@
   justify-content: center;
 }
 
-.card-list {
+.work-inner .work-list {
   width: 960px;
   min-width: 960px;
   display: flex;
   flex-wrap: wrap;
 }
 
-.card-item {
+.work-inner .work-list .work-item {
   width: 300px;
   margin: 10px;
 }
 
-.card-item .item-img {
+.work-list .work-item .item-img {
   position: relative;
   /* width: 300px; */
 }
 
-.card-item .item-img img {
+.work-list .work-item .item-img img {
   width: 300px;
   height: auto;
 }
 
-/* .card-item .mask {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 300px;
-  height: 200px;
-  background: rgba(36, 36, 36, 0.774);
-  color: #ffffff;
-  opacity: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition-duration: .5s;
-  transition-property: opacity, -webkit-transform;
-  transition-property: transform, opacity;
-}
-
-.mask>a {
-  font-size: 22px;
-  color: #fff;
-  border: 1px solid white;
-  border-radius: 5px;
-  text-align: center;
-  padding: 2.5px 15px 2.5px 15px;
-  text-decoration: none;
-}
-
-.card-item .mask:hover {
-  cursor: pointer;
-  opacity: 1;
-  transition-duration: .5s;
-  transition-property: opacity, -webkit-transform;
-  transition-property: transform, opacity;
-} */
-
-.card-box {
+.work-list .work-item .work-box {
   /* text-align: left; */
   display: block;
   overflow: hidden;
@@ -296,7 +261,7 @@
   white-space: nowrap;
 }
 
-.box-title {
+.work-list .work-item .work-box .box-title {
   text-decoration: underline;
   font-weight: bold;
   margin-top: 1rem;
@@ -306,7 +271,7 @@
   transition-property: transform, opacity, text-decoration;
 }
 
-.box-title:hover {
+.work-list .work-item .work-box .box-title:hover {
   cursor: pointer;
   text-decoration: none;
   font-weight: normal;
@@ -316,14 +281,14 @@
   transition-property: transform, opacity, text-decoration;
 }
 
-.works-tag {
+.work-list .work-item .work-box .works-tag {
   width: 300px;
   font-size: 13px;
   color: #6e6e6e;
   margin-top: 5px;
 }
 
-.card-item {
+.work-list .work-item {
   opacity: 1;
   transform: translateY(0px);
   transition: all 1s ease 0s;
@@ -360,35 +325,34 @@
 
 }
 
-.line-inner {
+.contact .line .line-inner {
   width: 70%;
 }
 
-.line-txt {
+.contact .line .line-inner .line-txt {
   width: 50%;
   padding: 2%;
 
 }
 
-.txt-item {
+.line .line-inner .line-txt .txt-item {
   height: 270px;
   background-color: #fff;
   padding: 40px;
 }
 
-.txt-item h4 {
+.line .line-inner .line-txt .txt-item h4 {
   text-decoration: underline;
 }
 
-.txt-item p {
+.line .line-inner .line-txt .txt-item p {
   font-size: 14px;
   padding: 20px 50px 20px 50px;
 }
 
-.txt-item a {
-  color: #333;
-}
 
+
+/* news */
 .news-main {
   width: 100%;
   padding-top: 60px;
@@ -406,7 +370,6 @@
 
 .news-content {
   width: 100%;
-
 }
 
 .news-list {
@@ -417,17 +380,23 @@
 }
 
 .news-list p {
-  margin: 0;
- 
+  margin: 0; 
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.news-list li {
+  padding: 10px;
 }
 
-.topics-content a {
+.news-list .topics-content a {
   font-weight: bold;
   font-size: 18px;
   color: #333;
   text-decoration: underline;
 }
-.topics-content a:hover {
+
+.news-list .topics-content a:hover {
   color: #333;
   text-decoration: none;
   opacity: 0.75;
@@ -435,18 +404,22 @@
   transition-property: opacity, -webkit-transform;
   transition-property: transform, opacity, text-decoration;
 }
-.topics-tag {
+
+.news-list .topics-tag {
   /* news 标签 */
   /* height: 20px; */
   display: inline-block;
   padding: 0.1em 0.5em 0;
-  background: #ac7125;
+  background: #feca15;
   color: white;
   text-align: center;
   font-weight: 400;
   font-size: 0.86em;
   letter-spacing: 0.5px;
   border-radius: 5px;
+}
+.news-list .topics-time {
+  padding: 10px;
 }
 
 /* team-cards */
@@ -465,7 +438,6 @@
   text-align: center;
   min-height: 400px;
   max-height: 400px;
-
 }
 
 .team-item-content img {
@@ -473,11 +445,16 @@
   height: auto;
 }
 
+.team-item .item-img {
+  position: relative;
+}
+
+/* 
 .team-item-content img:hover {
   width: 100%;
   cursor: pointer;
 
-}
+} */
 
 .team-item-content .item-text {
   text-align: center;
@@ -516,4 +493,82 @@
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 4;
+}
+
+/* team */
+/* event */
+.event {
+  width: 100%;
+  margin-top: 40px;
+}
+
+.event_ul {
+  list-style: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
+}
+
+.event .event_ul li {
+  /* float: left; */
+  width: 25%;
+  position: relative;
+  overflow: hidden;
+  z-index: 0;
+
+  -webkit-transition: all .5s 0s ease-out;
+  -moz-transition: all .5s 0s ease-out;
+  transition: all .5s 0s ease-out;
+}
+
+.event .event_ul li a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  -webkit-transition: all .3s 0s cubic-bezier(.165, .84, .44, 1);
+  -moz-transition: all .3s 0s cubic-bezier(.165, .84, .44, 1);
+  transition: all .3s 0s cubic-bezier(.165, .84, .44, 1);
+  text-decoration: none;
+  color: #333;
+}
+
+.event .event_ul li .img {
+  margin: 0;
+  line-height: 0;
+  overflow: hidden;
+  background-size: cover;
+}
+
+.event .event_ul li .img img {
+  width: 100%;
+  height: auto;
+}
+
+.event .event_ul li .detail_area {
+  padding: 4% 4%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-transition: all .9s 0s cubic-bezier(.165, .84, .44, 1);
+  -moz-transition: all .9s 0s cubic-bezier(.165, .84, .44, 1);
+  transition: all .9s 0s cubic-bezier(.165, .84, .44, 1);
+}
+.event .event_ul li .detail_area .title{
+margin: 0;
+}
+.event .event_ul li:hover{
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.308); 
+}
+.event .event_ul li>a>p>img {
+  transform: scale(1);
+  transition: all .9s 0s cubic-bezier(.165, .84, .44, 1);
+}
+
+.event .event_ul li:hover>a>p>img {
+  transform: scale(1.1);
+  transition: all .9s 0s cubic-bezier(.165, .84, .44, 1);
+}
+.event .event_ul li:hover>a>div {
+  background-color: #264989;
+  color: #fff;
 }
