--- a/demo/css/index.css
+++ b/demo/css/index.css
@@ -250,7 +250,95 @@
 }
 
 /* work-cards */
-/* work部分用event一样的css */
+.work {
+  width: 100%;
+  margin-top: 40px;
+  margin-bottom: 60px;
+}
+
+.work_ul {
+  list-style: none;
+  /* display: flex; */
+  flex-wrap: wrap;
+  margin: 0;
+  padding: 0;
+  margin-top: 20px;
+  padding-bottom: 20px;
+  /* clear: both; */
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.work .work_ul li {
+  /* float: left; */
+  width: 33.33%;
+  position: relative;
+  overflow: hidden;
+  -webkit-transition: all .5s 0s ease-out;
+  -moz-transition: all .5s 0s ease-out;
+  transition: all .5s 0s ease-out;
+}
+
+.work .work_ul li a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  -webkit-transition: all .3s 0s cubic-bezier(.165, .84, .44, 1);
+  -moz-transition: all .3s 0s cubic-bezier(.165, .84, .44, 1);
+  transition: all .3s 0s cubic-bezier(.165, .84, .44, 1);
+  text-decoration: none;
+  color: #333;
+}
+
+.work .work_ul li .img {
+  margin: 0;
+  line-height: 0;
+  overflow: hidden;
+  background-size: cover;
+}
+
+.work .work_ul li .img img {
+  width: 100%;
+  height: auto;
+}
+
+.work .work_ul li .detail_area {
+  padding: 4% 4%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-transition: all .6s 0s cubic-bezier(.165, .84, .44, 1);
+  -moz-transition: all .6s 0s cubic-bezier(.165, .84, .44, 1);
+  transition: all .6s 0s cubic-bezier(.165, .84, .44, 1);
+}
+
+.work .work_ul li .detail_area .title {
+  margin: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.work .work_ul li:hover {
+  box-shadow: 0 0 22.5px rgba(0, 0, 0, 0.589);
+}
+
+.work .work_ul li>a>p>img {
+  transform: scale(1);
+  transition: all .6s 0s cubic-bezier(.165, .84, .44, 1);
+}
+
+.work .work_ul li:hover>a>p>img {
+  transform: scale(1.1);
+  transition: all .6s 0s cubic-bezier(.165, .84, .44, 1);
+}
+
+.work .work_ul li:hover>a>div {
+  background-color: #264989;
+  color: #fff;
+}
+
 /* contact-section  */
 .contact {
   background-image: url("./../imgs/business/market-street-in-san-francisco-california-picjumbo-com.jpg");
@@ -307,7 +395,43 @@
   padding: 20px 50px 20px 50px;
 }
 
+.line .line-inner .line-txt .txt-item a {
+  font-size: 24px;
+  color: #333;
+  text-decoration: underline;
+}
 
+.line .line-inner .line-txt .txt-item a:hover {
+  cursor: pointer;
+  text-decoration: none;
+  opacity: 0.75;
+  transition-duration: 0.25s;
+  transition-property: opacity;
+  transition-timing-function: ease-in-out;
+}
+
+/* .line .line-inner .line-txt:nth-child(1) a {
+  color: #333;
+  padding: 0.5rem 1rem;
+  border: 2px solid #264989c7;
+  border-radius: 0.5rem;
+  background-color: #fff;
+  outline: none;
+  font-size: 22px;
+  transition-property: background-color, color;
+  transition-duration: 0.5s;
+  transition-timing-function: ease-in-out;
+
+}
+
+.line .line-inner .line-txt:nth-child(1) a:hover {
+  cursor: pointer;
+  color: #fff;
+  background-color: #264989;
+  transition-property: background-color, color;
+  transition-duration: 0.5s;
+  transition-timing-function: ease-in-out;
+} */
 
 /* news */
 .news-main {
@@ -337,6 +461,7 @@
 
 .news-list p {
   margin: 0;
+  margin-bottom: 5px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -347,6 +472,7 @@
 }
 
 .news-list .topics-content a {
+  margin-bottom: 5px;
   font-weight: bold;
   font-size: 18px;
   color: #333;
@@ -466,6 +592,7 @@
   display: flex;
   margin: 0;
   padding: 0;
+  margin-top: 20px;
   padding-bottom: 20px;
 }
 
