--- a/demo/css/header.css
+++ b/demo/css/header.css
@@ -343,7 +343,8 @@
   }
 
   .nav-right {
-    width: 20%;
+    margin-left: 70px;
+    width: 15%;
     height: auto;
     display: flex;
     justify-content: flex-end;
