--- a/demo/css/index.css
+++ b/demo/css/index.css
@@ -107,7 +107,8 @@
   
   .work .work_ul li {
     /* float: left; */
-    width: 33.33%;
+    width: 30%;
+    margin: 1.5%;
     position: relative;
     overflow: hidden;
     -webkit-transition: all .5s 0s ease-out;
@@ -283,7 +284,8 @@
   
   .work .work_ul li {
     /* float: left; */
-    width: 33.33%;
+    width: 45%;
+    margin: 2.5%;
     position: relative;
     overflow: hidden;
     -webkit-transition: all .5s 0s ease-out;
